tests/cases/positive/syntax/grading/lamGradedBinder.lam
-- you can grade lambda binders
test = \(x : (.0, .0) Level) -> lzero
