tests/cases/negative/scope/grading/unboundVarInLamGrade.lam
-- we reference an unbound variable in a graded lambda binder
test : _
test = \(x : [s, _] Level) -> Level
